# virtual-reality

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  configure.cmake  sample-config.json  service.ps1  ucm.cmake  vr.py
dep/: CMakeLists.txt
dep/hooker/: CMakeLists.txt  LICENSE  hooker.c  hooker.h  hooker.hpp
dep/mini-gzip/: CMakeLists.txt  mini_gzip.c  mini_gzip.h
dep/miniz/: CMakeLists.txt  miniz.c  miniz.h
dep/ntdll/: CMakeLists.txt  LICENSE  Makefile  ntdll.def  ntdll.h  ntdll64.def  ntdll86.def
dep/picopng/: CMakeLists.txt  picopng.cpp  picopng.h
dep/tiny-json/: CMakeLists.txt
dep/tinystl/: CMakeLists.txt
dep/tinystl/include/stl/: README.md  allocator.h  allocator_default.h  array.h  buffer.h  function.h  hash.h  hash_base.h  list.h  memory.h  new.h  resource_collection.h  smallvector.h  stddef.h  string.h  string_view.h  tinystl.natvis  traits.h  unordered_map.h  unordered_set.h  utils.h  vector.h
dep/tinystl/include/stl/detail/: ref.h
script/: bin2h.py  ping.py  png.py
src/: CMakeLists.txt  config.h  vr-config.h.in
src/gts/: CMakeLists.txt  gts.cpp
src/keylogger/: CMakeLists.txt  keylogger.cpp
src/shared/: CMakeLists.txt  LoadLibraryR.c  LoadLibraryR.h  ReflectiveLoader.c  ReflectiveLoader.h  context.h  coroutine.cpp  coroutine.h  crt.cpp  debug.cpp  debug.h  free_exit.asm  math.cpp  math.h  payload.cpp  payload.h  process_hollowing.cpp  process_hollowing.h  rc4.cpp  rc4.h  resources.cpp  resources.h  shellcode.cpp  shellcode.h  win32.cpp  win32.h  winhttp.cpp  winhttp.h  xorstr.hpp
src/stager/: CMakeLists.txt  stager.c
src/vr/: CMakeLists.txt  context.h  icmp.cpp  icmp.hpp  imgur.cpp  injector.cpp  main.cpp  payload.cpp
